--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8888
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bigproject?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=quangminh1
+spring.datasource.password=
 
 folder.storage.file=D:\\opt\\image\\bigproject\\
 
